--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
 - pip install coveralls
 script:
 - flake8 試驗 輕聲分析 --exclude=__pycache__ --show-source --count --ignore=E501
-- coverage run -m unittest discover 試驗
+- coverage run --source=試驗 -m unittest
 after_success:
 - coverage report
 - coveralls
